# dokushin

./: .gitlab-ci.yml  Makefile  NEWS.md  Pipfile  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  sudoku_test.py  tests.py
dokushin/: __init__.py  models.py  utils.py
sudoku/: __init__.py  csp.py  graphs.py  lp.py  poly.py  utils.py
tests/: test_dims.py
