[tool.poetry]
name = "dokushin"
version = "0.1.0"
description = "Modeling Sudoku puzzles in Python"
authors = ["Matthew Henderson <matthew.james.henderson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-constraint = "1.3.1"
networkx = "^3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
